main/default/objects/Amendment_Configuration__mdt/Amendment_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Amendment Configuration</label>
    <pluralLabel>Amendment Configurations</pluralLabel>
</CustomObject>