main/default/objects/Amendment_Configuration__mdt/fields/Amendment_Name__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Name__c</fullName>
    <label>Amendment Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>