main/default/objects/Amendment_Configuration__mdt/fields/Default_Change_Description__c.field-meta.xml
<CustomField>
    <fullName>Default_Change_Description__c</fullName>
    <label>Default Change Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>